fix stats on mobile

--- a/src/youth-markets/sass/promo-blocks.scss
+++ b/src/youth-markets/sass/promo-blocks.scss
@@ -48,7 +48,11 @@
     color: #ffffff;
     font-size: 68px;
     line-height: 0.75;
-    margin: 50px 0 10px;
+
+    @media(min-width: $screen-sm-min) {
+      color: $brand-white;
+      margin: 50px 0 10px;
+    }
   }
 
   p {
